<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) David Teresi 2021.
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/keyboard_shadow"
    android:elevation="8dp"
    android:orientation="horizontal"
    tools:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnBackspace"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/backspace"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/ic_backspace"
            android:tint="?attr/colorControlNormal"
            app:srcCompat="@drawable/ic_backspace"
            tools:srcCompat="@drawable/ic_backspace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnA"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:text="@string/a"
            android:textAppearance="@style/AButtonText" />

        <Button
            android:id="@+id/btnSpace"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="true"
            android:text="@string/space"
            android:textAppearance="@style/SpaceButtonText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnReturn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/enter"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/ic_return"
            android:tint="?attr/colorControlNormal"
            app:srcCompat="@drawable/ic_return"
            tools:srcCompat="@drawable/ic_return" />

    </LinearLayout>

</LinearLayout>